fixed spacing/css on facilities tabs/nav. closes #159

--- a/static/css/app.less
+++ b/static/css/app.less
@@ -136,6 +136,11 @@ body {
     padding: 0 0 20px 0;
   }
 }
+#facilities-nav {
+  .nav > li {
+    margin: 10px -10px -1px 20px;
+  }
+}
 #loader > ul li {
   list-style-type: none;
   padding: 10px 0 0 20px;
